--- a/lib/assets/_primary_themes.scss
+++ b/lib/assets/_primary_themes.scss
@@ -7,8 +7,8 @@
 .btn-primary,
 .btn-primary:visited,
 .btn-primary i {
-  background-color: $primary-color !important;
-  border-color: $primary-color !important;
+  background-color: #82bf31 !important;
+  border-color: #82bf31 !important;
   color: white !important;
 }
 
@@ -17,8 +17,8 @@
 .btn-primary:active:hover,
 .btn-primary:hover,
 .btn-primary:hover i {
-  background-color: $primary-color-darken !important;
-  border-color: $primary-color-darken !important;
+  background-color: $primary-color !important;
+  border-color: $primary-color !important;
   color: white !important;
 }
 
