New method to list rooms recordings

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -19,10 +19,10 @@
       <div class="col-md-12 col-sm-12 text-center">
         <p class="lead offset-lg-2 col-lg-8 col-sm-12 ">Добро пожаловать в сервис дистанционных консультаций Медицинского центра 21 Век.
 	    <br><br>
-	    Для подключения к конференции используйте ссылку с кодом которую мы направили Вам на почту и в Личный кабинет (раздел Предстоящие приемы).
+	    Для подключения к конференции используйте ссылку с кодом, которую мы направили Вам на почту и в Личный кабинет (раздел Предстоящие приемы).
 	    <br><br>
 	    Для комфортного получения консульации, убедитесь, что Вы подключены к WiFi, либо к другой высокоскоростной мобильной сети (4G, LTE) с хорошим уровнем сигнала.
-	    Также мы рекоммендуем использовать браузер Google Chrome, либо Safari для правильной работы самой программы.
+	    Мы рекомендуем использовать браузер Google Chrome, Mozilla Firefox, либо Safari для правильной работы самой программы.
 	    <br><br><br>
 	    С нетерпением ждем Вас на предстоящей консультации!
 	</p>
