--- a/app/views/rooms/components/_room_event.html.erb
+++ b/app/views/rooms/components/_room_event.html.erb
@@ -18,7 +18,7 @@
     <div class="row pt-9">
       <div class="col">
         <h4 class="text-left">Дистанционная консультация</h4>
-        <h3 class="display-3 text-left mb-3 font-weight-200"><%= title(@room.name) %></h3>
+        <h2 class="text-left mb-3 font-weight-light"><%= title(@room.name) %></h2>
         <hr class="mt-2 float-left">
       </div>
     </div>
