--- a/app/views/rooms/join.html.erb
+++ b/app/views/rooms/join.html.erb
@@ -49,7 +49,7 @@
       <% if display_joiner_consent %>
         <label class="custom-control custom-checkbox">
           <input id="joiner-consent" type="checkbox" class="custom-control-input" required>
-          <div class="text-left mt-4 custom-control-label">Даю свое согласие на запись консультации. Запись может включать мой голос и видео, если они были включены.</div>
+          <div class="text-left mt-4 custom-control-label">Я даю свое согласие на аудио- и видеозапись консультации. Записи тщательно охраняются организацией в соответствии с условиями соблюдения врачебной тайны.</div>
         </label>
       <% end %>
     <% end %>
